# CommitBuddy

./: .gitignore  CHANGELOG.md  LICENSE  MAINIFEST.in  README.md  config.json  example-commit-buddy.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
src/commit_buddy/: __init__.py  config.py  git_operations.py  main.py
src/commit_buddy/callbacks/: __init__.py  silent_handler.py
src/commit_buddy/chains/: __init__.py  change_splitter.py  diff_analyzer.py  message_generator.py
src/commit_buddy/llm/: __init__.py  model_loader.py  prompts.py
src/commit_buddy/utils/: __init__.py  formatters.py
