[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-buddy"
version = "0.1.0"
description = "AI-Powered Git Commit Assistant"
readme = "README.md"
authors = [{name = "@atom2ueki"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "commit", "ai", "ollama"]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
commitbuddy = "commit_buddy.main:main"

[project.urls]
Homepage = "https://github.com/atom2ueki/commitbuddy"
Repository = "https://github.com/atom2ueki/commitbuddy.git"
